fix: button alignment

--- a/src/components/createWizardForm/createWizardForm.css
+++ b/src/components/createWizardForm/createWizardForm.css
@@ -34,7 +34,6 @@
 
 .wizard-form .inputs-item p {
     text-align: left;
-    margin-top: 20px;
 }
 
 .wizard-form .inputs-item.checkbox {
